A failing test for breakpoints

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,7 +2,10 @@ enable_testing()
 set(LIBS trap)
 include_directories(. ../include)
 add_executable(test_exec test_exec.c)
+add_executable(test_breakpoint test_breakpoint.c)
 target_link_libraries(test_exec ${LIBS})
+target_link_libraries(test_breakpoint ${LIBS})
 add_test(test_exec ${CMAKE_CURRENT_BINARY_DIR}/test_exec)
+add_test(test_breakpoint ${CMAKE_CURRENT_BINARY_DIR}/test_breakpoint)
 
 add_subdirectory(inferiors)
