test_multi_breakpoint
A test for breakpoints that are hit more than once.  Currently disabled.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,11 +1,15 @@
 enable_testing()
 set(LIBS trap)
 include_directories(. ../include)
-add_executable(test_exec test_exec.c)
-add_executable(test_breakpoint test_breakpoint.c)
-target_link_libraries(test_exec ${LIBS})
-target_link_libraries(test_breakpoint ${LIBS})
-add_test(test_exec ${CMAKE_CURRENT_BINARY_DIR}/test_exec)
-add_test(test_breakpoint ${CMAKE_CURRENT_BINARY_DIR}/test_breakpoint)
+
+set(TESTS test_exec
+          test_breakpoint
+	  test_multi_breakpoint)
+
+foreach(TEST ${TESTS})
+  add_executable(${TEST} ${TEST}.c)
+  target_link_libraries(${TEST} ${LIBS})
+  add_test(${TEST} ${CMAKE_CURRENT_BINARY_DIR}/${TEST})
+endforeach(TEST)
 
 add_subdirectory(inferiors)
