--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,7 +4,8 @@ include_directories(. ../include)
 
 set(TESTS test_exec
           test_breakpoint
-	  test_multi_breakpoint)
+	        test_multi_breakpoint
+          test_multiple_breakpoints)
 
 foreach(TEST ${TESTS})
   add_executable(${TEST} ${TEST}.c)
