Pass test_duplicate_breakpoint
* After cleaning up deferred breakpints check for any active
  breakpoints that need to be reset.
* When setting a breakpoint don't read an original_breakpoint_word that
  has some other breakpoint's INT 3 in it.
* Enable test_duplicate_breakpoint

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -5,7 +5,11 @@ include_directories(. ../include)
 set(TESTS test_exec
           test_breakpoint
 	        test_multi_breakpoint
-          test_multiple_breakpoints)
+          test_multiple_breakpoints
+          test_delete_breakpoint
+          test_delete_breakpoint_in_callback
+          test_duplicate_breakpoint
+          )
 
 foreach(TEST ${TESTS})
   add_executable(${TEST} ${TEST}.c)
