New test: test_multiple_breakpoints
Tests setting breakpoints at multiple locations.  Copied from master
branch.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,6 +4,7 @@ include_directories(. ../include)
 
 set(TESTS test_exec
           test_breakpoint
+	  test_multiple_breakpoints
 	  test_multi_breakpoint)
 
 foreach(TEST ${TESTS})
